Change naming convention
